<resources>
    <string name="app_name">mazeeh</string>


    <string name="welcome">خوش آمدید</string>
    <string name="verification">تایید شماره موبایل</string>
    <string name="name">نام</string>
    <string name="date">تاریخ</string>
    <string name="comment">نظر</string>

    <string name="register_info_activity">ثبت نام</string>
    <string name="verify_info_activity">لطفا کد ارسال شده را وارد کنید</string>
    <string name="hint_text_phone_number_edt_text">شماره موبایل</string>
    <string name="hint_text_password_edt_text">کلمه عبور</string>
    <string name="forgot_password">کلمه عبور را فراموش کرده اید ؟</string>
    <string name="already_have_account">قبلا ثبت نام کرده اید ؟</string>
    <string name="send_again_verification_code">دریافت مجدد کد (60)</string>
    <string name="userProfile">پروفایل</string>
    <string name="cartItem">سبد خرید</string>
    <string name="restaurants">رستوران\u200cها</string>
    <string name="home">خانه</string>
    <string name="search_title">جستجوی رستوران\u200cها</string>
    <string name="search">جستجو</string>
    <string name="drawer">drawer</string>
    <string name="score">امتیاز</string>
    <string name="defaultCity">تهران</string>

    <string name="tab_berger">برگر</string>
    <string name="tab_hotdog">هات داگ</string>
    <string name="tab_text_3">پیتزا</string>
    <string name="title_activity_maps">Map</string>
    <string name="popular_categories">دسته بندی\u200cهای پرطرفدار</string>
    <string name="delicious">خوشمزه\u200cها</string>
    <string name="new_restaurants">جدید ترین\u200cها</string>
    <string name="new_res">جدید</string>
    <string name="delivery_time">پیک (60 دقیقه)</string>
    <string name="region">محله</string>
    <string name="minimum_order">حداقل سفارش</string>
    <string name="total_items_price">جمع سفارش\u200cها</string>
    <string name="food_packing">بسته بندی</string>
    <string name="discount">تخفیف</string>
    <string name="restaurant_taxes">مالیات</string>
    <string name="free">رایگان</string>
    <string name="shipping_cost_on_location">هزینه پیک بر اساس موقعیت</string>
    <string name="percent">%</string>
    <string name="empty_cart">سبد خرید خالس است.</string>
    <string name="order">سفارش</string>
    <string name="freeShipping">ارسال رایگان</string>
    <string name="notFreeShipping">ارسال رایگان ندارد</string>
    <string name="determineDeliveryType">نحوه دریافت سفارش</string>
    <string name="deliverInRestaurant">تحویل در رستوران</string>
    <string name="deliverInMyAddress">دریافت در آدرس من</string>
    <string name="add_new_address">افزودن آدرس جدید</string>
    <string name="accept_new_location">تایید موقعیت مکانی</string>
    <string name="accept_selected_location">تایید موقعیت انتخاب شده</string>
    <string name="accept">تایید</string>
    <string name="address">آدرس</string>
    <string name="exactAddress">آدرس دقیق</string>
    <string name="city">شهر</string>
    <string name="state">استان</string>
    <string name="addressTag">عنوان آدرس</string>
    <string name="select_state_and_city">لطفا شهر خود را انتخاب کنید</string>
    <string name="select_specific_location_on_map">لطفا محل دقیق خود را روی نقشه انتخاب کنید</string>
    <string name="testPrice">4000 تومان</string>
    <string name="payment"> تایید سفارش</string>
    <string name="chooseOnDefault">انتخاب به عنوان پیشفرض</string>
    <string name="restaurant_shipping_cost">ارسال</string>
    <string name="pleaseEnterYourDiscountCode">کد تخفیف</string>
    <string name="checkWalletBalance">بررسی کیف پول…</string>
    <string name="your_addresses">آدرس\u200cهای شما</string>
    <string name="online_pay">پرداخت آنلاین</string>
    <string name="in_place_pay">پرداخت در محل</string>
    <string name="transactions">تراکنش\u200cها</string>
    <string name="yourFavoriteFoods">غذا\u200cهای مورد علاقه شما</string>
    <string name="yourFavoriteRestaurants">رستوران\u200cهای مورد علاقه شما</string>
    <string name="showOrderAndAddComment">مشاهده / ثبت نظر</string>
    <string name="foodQuality">کیفیت غذا:</string>
    <string name="arrivalTime">زمان سرویس‌دهی:</string>
    <string name="personnelBehaviour">برخورد پرسنل و پیک:</string>
    <string name="yourComment">نظر شما</string>
    <string name="acceptComment">ثبت</string>
    <string name="systemQuality">کیفیت سیستم</string>
    <string name="regsterInMazzeh">ثبت\u200cنام در مزه</string>
    <string name="register">ثبت\u200cنام</string>
    <string name="changeUserInfo">ویرایش اطلاعات</string>
    <string name="logout">خروج</string>
    <string name="yourInfo">اطلاعات شما</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="birthDate">تاریخ تولد</string>

    <string name="showCart">مشاهده سبد خرید</string>
    <string name="mazBin">مزبین</string>
    <string name="findRestaurantsAccordingToLocation">یافتن\nرستوران\u200cهای\nدلخواه شما</string>
    <string name="scanMazeeBarcode">اسکن QR کد مزه</string>
    <string name="qrCodeFragmentDetails">فقط کافیه QR کد رستورانی که اونجا حضور داری رو اسکن کنی تا منو غذاهای خوشمزشون رو ببینی</string>
    <string name="workPlace">محل کار</string>
    <string name="other">سایر</string>
    <string name="UNIVERSITY">دانشگاه</string>
    <string name="tagAddress">عنوان آدرس</string>
    <string name="close">بسته</string>
    <string name="closeWindow">بستن</string>
    <string name="lackOfService">عدم سرویس دهی</string>
    <string name="type_food_name">وعده غذایی</string>
    <string name="start_time">زمان شروع به کار</string>
    <string name="end_time">زمان پایان کار</string>
    <string name="days_work">روزهای کاری</string>
    <string name="enterAsGuest">مشاهده منو</string>
    <string name="loginOrRegister">ورود / ثبت\u200cنام</string>
    <string name="tryAgain">تلاش دوباره</string>
    <string name="restaurantsNearMe">رستوران‌های نزدیک من</string>
    <string name="pleaseLogin">لطفا وارد شوید</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">ورود</string>
    <string name="restaurantsFilter">فیلتر و مرتب سازی رستوران\u200cها</string>
    <string name="filterByFoodType">دسته\u200cبندی براساس غذا</string>
    <string name="fave_resturants">محبوب ترین‌ها</string>
    <string name="filters">فیلترها</string>
    <string name="apply">اعمال</string>
    <string name="most_relevant">مرتبط ترین‌ها</string>


    <string name="food_category">دسته بندی براساس غذا</string>
    <string name="description">توضیحات</string>
    <string name="issueincommunicatingwithserver">خطا در برقراری ارتباط با سرور</string>
    <string name="movetobankpay">درحال انتقال به درگاه بانک…</string>
    <string-array name="food_category">
        <item>فست فود</item>
        <item>برگر</item>
        <item>پیتزا</item>
        <item>ساندویچ</item>
        <item>هات داگ</item>
        <item>سوخاری</item>
        <item>ایرانی</item>
        <item>کافی شاپ</item>
        <item>چینی</item>
        <item>ایتالیایی</item>
        <item>کباب</item>
        <item>گیاهی</item>
        <item>دریایی</item>
        <item>دسر</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_text_new_password_edt_text">کلمه عبور جدید</string>
    <string name="payWithWallet">پرداخت با کیف پول</string>
    <string name="walletCost">موجودی کیف پول شما:</string>
    <string name="currentPass">کلمه عبور فعلی</string>
    <string name="newPass">کلمه عبور جدید</string>
    <string name="confirmNewPass">تکرار کلمه عبور</string>
    <string name="changePassword">تغییر کلمه عبور</string>
    <string name="orders">سفارش\u200cها</string>
    <string name="showFoods">مشاهده غذاها</string>
    <string name="transActions_list">لیست تراکنش\u200cها</string>
    <string name="doneOrders">سفارش‌های انجام شده</string>
    <string name="qr">لطفا QR کد را اسکن کنید</string>
</resources>
