<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item android:id="@+id/restaurantFragment"
        android:title="@string/restaurants"
        android:icon="@drawable/ic_cutlery"
       />
    <item
        android:id="@+id/qrCodeScannerFragment"
        android:title="@string/mazBin"
        android:icon="@drawable/ic_qr_scan"
        />
    <item android:id="@+id/cartFragment"
        android:title="@string/cartItem"
        android:icon="@drawable/ic_shopping_cart"
       />
    <item android:id="@+id/userProfileFragment"
    android:title="@string/userProfile"
        android:icon="@drawable/ic_user"
        />


</menu>