<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <!--<variable
            name="state"
            type="String" />

        <variable
            name="city"
            type="String" />

        <variable
            name="region"
            type="String" />-->
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ir.boojanco.onlinefoodorder.viewmodels.UserProfileViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/linear_layout_bottom_sheet_add_user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_deliver_in_my_address"
            android:drawablePadding="4dp"
            android:maxLines="1"
            android:text="@={viewModel.addressBottomSheetTitle}"
            android:textAlignment="center"
            android:textSize="@dimen/body1_paragraph_font_size"
            android:textStyle="bold"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.VISIBLE : View.GONE}" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sset_default_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.VISIBLE : View.GONE}"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    android:text="@string/chooseOnDefault" />

                <com.bitvale.switcher.SwitcherX
                    android:id="@+id/switcher_default_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:checked="@{viewModel.defaultAddress ,default=false}" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.VISIBLE : View.GONE}">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_inpu_state"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/state"
                app:boxBackgroundColor="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="2dp"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="1"
                    android:onClick="@{()-> viewModel.showStateCityDialog()}"
                    android:text="@={viewModel.state}"
                    android:textDirection="rtl"
                    android:textSize="@dimen/edit_text_font_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_view_city"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/city"
                app:boxBackgroundColor="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="2dp"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="1"
                    android:onClick="@{()-> viewModel.showStateCityDialog()}"
                    android:text="@={viewModel.city}"
                    android:textDirection="rtl"
                    android:textSize="@dimen/edit_text_font_size" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_view_region"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/region"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.VISIBLE : View.GONE}"
            app:boxBackgroundColor="@color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:focusable="false"
                android:inputType="none"
                android:maxLines="1"
                android:onClick="@{()-> viewModel.addAddressOnClick()}"
                android:text="@={viewModel.region}"
                android:textDirection="rtl"
                android:textSize="@dimen/edit_text_font_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_view_exact_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/exactAddress"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.VISIBLE : View.GONE}"
            app:boxBackgroundColor="@color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.exactAddress}"
                android:textDirection="rtl"
                android:textSize="@dimen/edit_text_font_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_view_address_tag"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/addressTag"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.VISIBLE : View.GONE}"
            app:boxBackgroundColor="@color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:inputType="text"
                android:maxLines="1"
                android:textDirection="rtl"
                android:textSize="@dimen/edit_text_font_size" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_accept_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{()-> viewModel.acceptAddNewUserAddressOrEditAddressOnClick()}"
            android:text="ثبت"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.VISIBLE : View.GONE}"
            app:cornerRadius="16dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_edit_user"
            android:drawablePadding="4dp"
            android:maxLines="1"
            android:text="@string/yourInfo"
            android:textAlignment="center"
            android:textSize="@dimen/body1_paragraph_font_size"
            android:textStyle="bold"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.GONE : View.VISIBLE}" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.GONE : View.VISIBLE}">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_inpu_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/name"
                app:boxBackgroundColor="@color/transparent"
                app:error="@{viewModel.firstNameErrorLiveData}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@={viewModel.firstNameLiveData}"
                    android:textDirection="rtl"
                    android:textSize="@dimen/edit_text_font_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_view_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/lastName"
                app:boxBackgroundColor="@color/transparent"
                app:error="@{viewModel.lastNameErrorLiveData}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@={viewModel.lastNameLiveData}"
                    android:textDirection="rtl"
                    android:textSize="@dimen/edit_text_font_size" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_view_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/email"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.GONE : View.VISIBLE}"
            app:boxBackgroundColor="@color/transparent"
            app:error="@{viewModel.emailErrorLiveData}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:inputType="textEmailAddress"
                android:maxLines="2"
                android:text="@={viewModel.emailLiveData}"
                android:textDirection="rtl"
                android:textSize="@dimen/edit_text_font_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_view_birthdate"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/birthDate"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.GONE : View.VISIBLE}"
            app:boxBackgroundColor="@color/transparent"
            app:error="@{viewModel.birthDateErrorLiveData}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:focusable="false"
                android:inputType="none"
                android:maxLines="1"
                android:onClick="@{()-> viewModel.birthDatePickerOnClick()}"
                android:text="@={viewModel.birthDateLiveData}"
                android:textDirection="rtl"
                android:textSize="@dimen/edit_text_font_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_accept_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{()-> viewModel.acceptEditUserProfileOnClick()}"
            android:text="ثبت"
            android:visibility="@{viewModel.bottomSheetChangeVisibility ? View.GONE : View.VISIBLE}"
            app:cornerRadius="16dp" />
    </LinearLayout>


</layout>
